objects/Error_Log__c.object
<CustomObject>
    <description>Record of all Error</description>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <description>Date &amp; Time details when the Error Occurred</description>
        <inlineHelpText>Log&apos;s Date &amp; Time details when the Error Occurred</inlineHelpText>
        <label>Log Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <description>Complete Stack Track about the Problem</description>
        <inlineHelpText>Error Problem Details</inlineHelpText>
        <label>Log Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>The Name of Either Apex Class or Apex Trigger</description>
        <inlineHelpText>Apex Class or Apex Trigger where the error occured</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>